--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start --hostname 0.0.0.0 --port 8080",
-    "generate": "nuxt generate",
-    "analyze": "nuxt build --analyze",
+    "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
-    "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js"
   },
